--- a/main.ipynb
+++ b/main.ipynb
@@ -1,14 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "view-in-github",
-    "colab_type": "text"
-   },
+   "cell_type": "raw",
    "source": [
-    "<a href=\"https://colab.research.google.com/github/lacykaltgr/satellite-image-segmentation/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
+    "e#%% md<a href=\"https://colab.research.google.com/github/lacykaltgr/satellite-image-segmentation/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": ""
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -64,6 +66,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "from src.model import UNet, EarlyStopper\n",
+    "unet = UNet().to(device)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "outputs": [
     {
@@ -80,7 +94,7 @@
     }
    ],
    "source": [
-    "from src.model import UNet, EarlyStopper\n",
+    "\n",
     "\n",
     "unet = UNet().to(device)\n",
     "es = EarlyStopper(patience=100)\n",
@@ -92,6 +106,15 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -171,49 +194,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "19604500.0"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.0020787475249198425"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import torch"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([1, 9, 512, 512])"
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TARGET\n",
+    "target = torch.tensor(train_dataset[0][1]).unsqueeze(0) # + BATCH_SIZE\n",
+    "target.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([1, 9, 512, 512])"
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#OUTPUT\n",
+    "output = unet(train_dataset[0][0].unsqueeze(0).to(device))\n",
+    "output.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([1, 512, 512])"
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_max = torch.max(target, 1)\n",
+    "target_max.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([1, 512, 512])"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_, output_max = torch.max(output, 1)\n",
+    "output_max.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([1, 512, 512])"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equal = output_max.to(device) == target_max.to(device)\n",
+    "equal.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([])"
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equal.sum().shape"
+   ],
    "metadata": {
     "collapsed": false
    }
