--- a/main.ipynb
+++ b/main.ipynb
@@ -311,7 +311,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "unet.load_state_dict(torch.load(root+ 'unet.h5'))"
+   ],
    "metadata": {
     "collapsed": false
    }
