--- a/tree-trunk-segmentation/main.ipynb
+++ b/tree-trunk-segmentation/main.ipynb
@@ -55,10 +55,11 @@
    "source": [
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
-    "from src.dataset import XYDataset, load_dataset\n",
+    "from src.dataset import XYDataset\n",
     "\n",
-    "train_dataset = XYDataset(root='data/train/')\n",
-    "val_dataset = XYDataset(root='data/val/')\n",
+    "dataset = XYDataset(root='data/')\n",
+    "train_dataset = dataset[:int(0.9*len(dataset))]\n",
+    "val_dataset = dataset[int(0.9*len(dataset)):]\n",
     "\n",
     "batch_size = 4\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
