--- a/tree_trunk_segmentation/main.ipynb
+++ b/tree_trunk_segmentation/main.ipynb
@@ -22,11 +22,11 @@
     "if colab:\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
-    "    root = '/content/drive/MyDrive/colab/tree-trunk-images/'\n",
+    "    root = '/content/tree_trunk_segmentation/data/'\n",
     "    device = 'cuda'\n",
     "    !wget -O treetrunk.zip https://github.com/lacykaltgr/agriculture-image-processing/archive/refs/heads/laci420.zip\n",
     "    !unzip treetrunk.zip\n",
-    "    !cp -r agriculture-image-processing-laci420/src .\n",
+    "    !cp -r agriculture-image-processing-laci420/tree_trunk_segmentation/src .\n",
     "else:\n",
     "    import sys\n",
     "    import os\n",
@@ -66,7 +66,7 @@
    ],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "from src.dataset import XYDataset, load_dataset\n",
+    "from tree_trunk_segmentation.src.dataset import XYDataset, load_dataset\n",
     "\n",
     "x_train, y_train, x_val, y_val = load_dataset(root='data/',\n",
     "                                              target_size_x=(4000, 3000),\n",
@@ -89,7 +89,7 @@
     "from torch import nn\n",
     "from unet import UNet\n",
     "from utils import EarlyStopper\n",
-    "from src.utils import binary_to_rgb\n",
+    "from tree_trunk_segmentation.src.utils import binary_to_rgb\n",
     "\n",
     "config = dict(\n",
     "    in_channels=3,\n",
