--- a/tree_trunk_segmentation/main.ipynb
+++ b/tree_trunk_segmentation/main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "colab = False\n",
@@ -30,10 +30,10 @@
     "else:\n",
     "    import sys\n",
     "    import os\n",
-    "    root = '/data/'\n",
+    "    root = 'data/'\n",
     "    device = 'mps'\n",
-    "    parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
-    "    sys.path.append(parent_directory)"
+    "    #parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "    #sys.path.append(parent_directory)"
    ],
    "metadata": {
     "id": "IFoQQUzKO0r7",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "id": "SA0rcmAtO0r9"
@@ -68,21 +68,21 @@
     "from torch.utils.data import DataLoader\n",
     "from tree_trunk_segmentation.src.dataset import XYDataset, load_dataset\n",
     "\n",
-    "x_train, y_train, x_val, y_val = load_dataset(root='data/',\n",
+    "x_train, y_train, x_val, y_val = load_dataset(root=root,\n",
     "                                              target_size_x=(4000, 3000),\n",
     "                                              target_size_y=(4000, 500),\n",
     "                                              val_split_ratio=0.9)\n",
     "train_dataset = XYDataset(x_train, y_train)\n",
     "val_dataset = XYDataset(x_val, y_val)\n",
     "\n",
-    "batch_size = 4\n",
+    "batch_size = 1\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -100,14 +100,14 @@
     "    kernel_sizes=3,  # 2*hiddens + 3*hiddens + 2\n",
     "    paddings=[ ['same']*int(3*2), ['same']*int(3*2) + [(1, 0), (1, 1)]],  # 2*hiddens + 3*hiddens + 2\n",
     "    strides=[[(1, 1)]*int(3*2), [(1, 1)]*int(3*2) + [(1, 3), (1, 2)]],  # 2*hiddens + 3*hiddens\n",
-    "    criterion=nn.BCELoss,\n",
-    "    output_activation=nn.Softmax,\n",
-    "    activation=nn.ReLU,\n",
+    "    criterion=nn.BCELoss(),\n",
+    "    output_activation=nn.Sigmoid(),\n",
+    "    activation=nn.ReLU(),\n",
     "    post_process=binary_to_rgb,\n",
     "    dimensions=2,\n",
     "    device='cuda'\n",
     ")\n",
-    "unet = UNet(**config)"
+    "unet = UNet(**config).to(device)"
    ],
    "metadata": {
     "collapsed": false
@@ -214,11 +214,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 1, 4000, 500]) torch.Size([1, 1, 4000, 500])\n",
+      "tensor([[[[False, False, False,  ..., False, False,  True],\n",
+      "          [ True, False, False,  ...,  True, False, False],\n",
+      "          [False,  True, False,  ..., False, False, False],\n",
+      "          ...,\n",
+      "          [False, False, False,  ...,  True, False, False],\n",
+      "          [False,  True, False,  ..., False, False, False],\n",
+      "          [False, False,  True,  ..., False,  True,  True]]]], device='mps:0')\n",
+      "torch.Size([1, 1, 4000, 500]) torch.Size([1, 1, 4000, 500])\n",
+      "tensor([[[[ True, False, False,  ..., False, False, False],\n",
+      "          [False, False, False,  ...,  True, False, False],\n",
+      "          [False, False, False,  ...,  True,  True,  True],\n",
+      "          ...,\n",
+      "          [False, False, False,  ...,  True, False, False],\n",
+      "          [ True, False, False,  ..., False, False, False],\n",
+      "          [False, False,  True,  ..., False, False,  True]]]], device='mps:0')\n"
+     ]
+    }
+   ],
    "source": [
     "eval = unet.evaluate(val_loader, device=device)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(2.695942521095276, 39.602675)"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
