--- a/tree_trunk_segmentation/main.ipynb
+++ b/tree_trunk_segmentation/main.ipynb
@@ -26,7 +26,9 @@
     "    device = 'cuda'\n",
     "    !wget -O treetrunk.zip https://github.com/lacykaltgr/agriculture-image-processing/archive/refs/heads/laci420.zip\n",
     "    !unzip treetrunk.zip\n",
-    "    !cp -r agriculture-image-processing-laci420/tree_trunk_segmentation/src .\n",
+    "    !cp -r agriculture-image-processing-laci420/tree_trunk_segmentation/ .\n",
+    "    !cp agriculture-image-processing-laci420/unet.py .\n",
+    "    !cp agriculture-image-processing-laci420/utils.py .\n",
     "else:\n",
     "    import sys\n",
     "    import os\n",
@@ -154,7 +156,7 @@
    ],
    "source": [
     "es = EarlyStopper(patience=10)\n",
-    "unet.train_model(train_loader, val_loader, es, num_epochs=1000, learning_rate=0.0001, device='mps')"
+    "unet.train_model(train_loader, val_loader, es, num_epochs=1000, learning_rate=0.0001, device=device)"
    ],
    "metadata": {
     "id": "9O20sVobO0r9",
