--- a/tree_trunk_segmentation/main.ipynb
+++ b/tree_trunk_segmentation/main.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "import torch\n",
     "from torch import nn\n",
-    "from unet import UNet\n",
+    "from tree_trunk_segmentation.src.model import TreeTrunkModel as UNet\n",
     "from utils import EarlyStopper\n",
     "from tree_trunk_segmentation.src.utils import binary_to_rgb\n",
     "\n",
@@ -100,8 +100,8 @@
     "    dropouts=[0, 0.3, 0.3],  # hiddens\n",
     "    maxpools=2,  # hiddens - 1\n",
     "    kernel_sizes=3,  # 2*hiddens + 3*hiddens + 2\n",
-    "    paddings=[ ['same']*int(3*2), ['same']*int(3*2) + [(1, 0), (1, 1)]],  # 2*hiddens + 3*hiddens + 2\n",
-    "    strides=[[(1, 1)]*int(3*2), [(1, 1)]*int(3*2) + [(1, 3), (1, 2)]],  # 2*hiddens + 3*hiddens\n",
+    "    paddings='same',  # 2*hiddens + 3*hiddens + 2\n",
+    "    strides=1,  # 2*hiddens + 3*hiddens\n",
     "    criterion=nn.BCELoss(),\n",
     "    output_activation=nn.Sigmoid(),\n",
     "    activation=nn.ReLU(),\n",
@@ -182,22 +182,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from matplotlib.pyplot import imshow, show\n",
-    "import numpy as np\n",
-    "imshow(x_train[0])\n",
-    "show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from src.utils import conf_matrix\n",
-    "conf_matrix(val_dataset, results)"
+    "from tree_trunk_segmentation.src.utils import plot_results\n",
+    "\n",
+    "pred = unet(val_dataset[0][0].cuda().unsqueeze(0)).detach().cpu().numpy()\n",
+    "plot_results(x_val[0], y_val[0], pred)"
    ],
    "metadata": {
     "collapsed": false
@@ -244,35 +232,6 @@
    "source": [
     "eval = unet.evaluate(val_loader, device=device)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(2.695942521095276, 39.602675)"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
