--- a/tree_trunk_segmentation/main.ipynb
+++ b/tree_trunk_segmentation/main.ipynb
@@ -62,6 +62,9 @@
       "libpng warning: iCCP: known incorrect sRGB profile\n",
       "libpng warning: iCCP: known incorrect sRGB profile\n",
       "libpng warning: iCCP: known incorrect sRGB profile\n",
+      "libpng warning: iCCP: known incorrect sRGB profile\n",
+      "libpng warning: iCCP: known incorrect sRGB profile\n",
+      "libpng warning: iCCP: known incorrect sRGB profile\n",
       "libpng warning: iCCP: known incorrect sRGB profile\n"
      ]
     }
